# Copyright (c) 2015, Pivotal Software, Inc. All Rights Reserved.

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../libgpcost/include)
include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../libnaucrates/include)
add_library(gpopt SHARED
            src/base/CAutoOptCtxt.cpp
            src/base/CColRef.cpp
            src/base/CColRefComputed.cpp
            src/base/CColRefSet.cpp
            src/base/CColRefSetIter.cpp
            src/base/CColRefTable.cpp
            src/base/CColumnFactory.cpp
            src/base/CConstraint.cpp
            src/base/CConstraintConjunction.cpp
            src/base/CConstraintDisjunction.cpp
            src/base/CConstraintInterval.cpp
            src/base/CConstraintNegation.cpp
            src/base/CCostContext.cpp
            src/base/CCTEInfo.cpp
            src/base/CCTEMap.cpp
            src/base/CCTEReq.cpp
            src/base/CDefaultComparator.cpp
            src/base/CDistributionSpecHashed.cpp
            src/base/CDistributionSpecNonSingleton.cpp
            src/base/CDistributionSpecRandom.cpp
            src/base/CDistributionSpecReplicated.cpp
            src/base/CDistributionSpecRouted.cpp
            src/base/CDistributionSpecSingleton.cpp
            src/base/CDistributionSpecStrictSingleton.cpp
            src/base/CDrvdProp.cpp
            src/base/CDrvdPropCtxt.cpp
            src/base/CDrvdPropCtxtPlan.cpp
            src/base/CDrvdPropPlan.cpp
            src/base/CDrvdPropRelational.cpp
            src/base/CDrvdPropScalar.cpp
            src/base/CEnfdDistribution.cpp
            src/base/CEnfdOrder.cpp
            src/base/CEnfdPartitionPropagation.cpp
            src/base/CEnfdProp.cpp
            src/base/CEnfdRewindability.cpp
            src/base/CFunctionalDependency.cpp
            src/base/CFunctionProp.cpp
            src/base/CIOUtils.cpp
            src/base/CKeyCollection.cpp
            src/base/COptCtxt.cpp
            src/base/COptimizationContext.cpp
            src/base/COrderSpec.cpp
            src/base/CPartFilterMap.cpp
            src/base/CPartIndexMap.cpp
            src/base/CPartInfo.cpp
            src/base/CPartitionPropagationSpec.cpp
            src/base/CPartKeys.cpp
            src/base/CPrintPrefix.cpp
            src/base/CPropConstraint.cpp
            src/base/CQueryContext.cpp
            src/base/CRange.cpp
            src/base/CReqdProp.cpp
            src/base/CReqdPropPlan.cpp
            src/base/CReqdPropRelational.cpp
            src/base/CRewindabilitySpec.cpp
            src/base/CStatsEquivClass.cpp
            src/base/CUtils.cpp
            src/base/CWindowFrame.cpp
            src/engine/CEngine.cpp
            src/engine/CEnumeratorConfig.cpp
            src/engine/CPartialPlan.cpp
            src/engine/CStatisticsConfig.cpp
            src/eval/CConstExprEvaluatorDefault.cpp
            src/eval/CConstExprEvaluatorDXL.cpp
            src/exception.cpp
            src/init.cpp
            src/mdcache/CMDAccessor.cpp
            src/mdcache/CMDAccessorUtils.cpp
            src/mdcache/CMDCache.cpp
            src/mdcache/CMDKey.cpp
            src/metadata/CColumnDescriptor.cpp
            src/metadata/CIndexDescriptor.cpp
            src/metadata/CName.cpp
            src/metadata/CPartConstraint.cpp
            src/metadata/CTableDescriptor.cpp
            src/minidump/CDXLMinidump.cpp
            src/minidump/CMiniDumperDXL.cpp
            src/minidump/CMinidumperUtils.cpp
            src/minidump/CSerializableMDAccessor.cpp
            src/minidump/CSerializableOptimizerConfig.cpp
            src/minidump/CSerializablePlan.cpp
            src/minidump/CSerializableQuery.cpp
            src/minidump/CSerializableStackTrace.cpp
            src/operators/CCNFConverter.cpp
            src/operators/CExpression.cpp
            src/operators/CExpressionFactorizer.cpp
            src/operators/CExpressionHandle.cpp
            src/operators/CExpressionPreprocessor.cpp
            src/operators/CExpressionUtils.cpp
            src/operators/CLogical.cpp
            src/operators/CLogicalApply.cpp
            src/operators/CLogicalAssert.cpp
            src/operators/CLogicalBitmapTableGet.cpp
            src/operators/CLogicalConstTableGet.cpp
            src/operators/CLogicalCTEAnchor.cpp
            src/operators/CLogicalCTEConsumer.cpp
            src/operators/CLogicalCTEProducer.cpp
            src/operators/CLogicalDelete.cpp
            src/operators/CLogicalDifference.cpp
            src/operators/CLogicalDifferenceAll.cpp
            src/operators/CLogicalDML.cpp
            src/operators/CLogicalDynamicBitmapTableGet.cpp
            src/operators/CLogicalDynamicGet.cpp
            src/operators/CLogicalDynamicGetBase.cpp
            src/operators/CLogicalDynamicIndexGet.cpp
            src/operators/CLogicalExternalGet.cpp
            src/operators/CLogicalFullOuterJoin.cpp
            src/operators/CLogicalGbAgg.cpp
            src/operators/CLogicalGbAggDeduplicate.cpp
            src/operators/CLogicalGet.cpp
            src/operators/CLogicalIndexGet.cpp
            src/operators/CLogicalInnerApply.cpp
            src/operators/CLogicalInnerCorrelatedApply.cpp
            src/operators/CLogicalInnerIndexApply.cpp
            src/operators/CLogicalInnerJoin.cpp
            src/operators/CLogicalInsert.cpp
            src/operators/CLogicalIntersect.cpp
            src/operators/CLogicalIntersectAll.cpp
            src/operators/CLogicalJoin.cpp
            src/operators/CLogicalLeftAntiSemiApply.cpp
            src/operators/CLogicalLeftAntiSemiApplyNotIn.cpp
            src/operators/CLogicalLeftAntiSemiCorrelatedApply.cpp
            src/operators/CLogicalLeftAntiSemiCorrelatedApplyNotIn.cpp
            src/operators/CLogicalLeftAntiSemiJoin.cpp
            src/operators/CLogicalLeftAntiSemiJoinNotIn.cpp
            src/operators/CLogicalLeftOuterApply.cpp
            src/operators/CLogicalLeftOuterCorrelatedApply.cpp
            src/operators/CLogicalLeftOuterJoin.cpp
            src/operators/CLogicalLeftSemiApply.cpp
            src/operators/CLogicalLeftSemiApplyIn.cpp
            src/operators/CLogicalLeftSemiCorrelatedApply.cpp
            src/operators/CLogicalLeftSemiCorrelatedApplyIn.cpp
            src/operators/CLogicalLeftSemiJoin.cpp
            src/operators/CLogicalLimit.cpp
            src/operators/CLogicalMaxOneRow.cpp
            src/operators/CLogicalNAryJoin.cpp
            src/operators/CLogicalPartitionSelector.cpp
            src/operators/CLogicalProject.cpp
            src/operators/CLogicalRowTrigger.cpp
            src/operators/CLogicalSelect.cpp
            src/operators/CLogicalSequence.cpp
            src/operators/CLogicalSequenceProject.cpp
            src/operators/CLogicalSetOp.cpp
            src/operators/CLogicalSplit.cpp
            src/operators/CLogicalTVF.cpp
            src/operators/CLogicalUnary.cpp
            src/operators/CLogicalUnion.cpp
            src/operators/CLogicalUnionAll.cpp
            src/operators/CLogicalUpdate.cpp
            src/operators/CNormalizer.cpp
            src/operators/COperator.cpp
            src/operators/CPattern.cpp
            src/operators/CPhysical.cpp
            src/operators/CPhysicalAgg.cpp
            src/operators/CPhysicalAssert.cpp
            src/operators/CPhysicalBitmapTableScan.cpp
            src/operators/CPhysicalComputeScalar.cpp
            src/operators/CPhysicalConstTableGet.cpp
            src/operators/CPhysicalCTEConsumer.cpp
            src/operators/CPhysicalCTEProducer.cpp
            src/operators/CPhysicalDML.cpp
            src/operators/CPhysicalDynamicBitmapTableScan.cpp
            src/operators/CPhysicalDynamicIndexScan.cpp
            src/operators/CPhysicalDynamicScan.cpp
            src/operators/CPhysicalDynamicTableScan.cpp
            src/operators/CPhysicalExternalScan.cpp
            src/operators/CPhysicalFilter.cpp
            src/operators/CPhysicalHashAgg.cpp
            src/operators/CPhysicalHashAggDeduplicate.cpp
            src/operators/CPhysicalHashJoin.cpp
            src/operators/CPhysicalIndexScan.cpp
            src/operators/CPhysicalInnerHashJoin.cpp
            src/operators/CPhysicalInnerIndexNLJoin.cpp
            src/operators/CPhysicalInnerNLJoin.cpp
            src/operators/CPhysicalJoin.cpp
            src/operators/CPhysicalLeftAntiSemiHashJoin.cpp
            src/operators/CPhysicalLeftAntiSemiHashJoinNotIn.cpp
            src/operators/CPhysicalLeftAntiSemiNLJoin.cpp
            src/operators/CPhysicalLeftOuterHashJoin.cpp
            src/operators/CPhysicalLeftOuterNLJoin.cpp
            src/operators/CPhysicalLeftSemiHashJoin.cpp
            src/operators/CPhysicalLeftSemiNLJoin.cpp
            src/operators/CPhysicalLimit.cpp
            src/operators/CPhysicalMotion.cpp
            src/operators/CPhysicalMotionBroadcast.cpp
            src/operators/CPhysicalMotionGather.cpp
            src/operators/CPhysicalMotionHashDistribute.cpp
            src/operators/CPhysicalMotionRandom.cpp
            src/operators/CPhysicalMotionRoutedDistribute.cpp
            src/operators/CPhysicalNLJoin.cpp
            src/operators/CPhysicalPartitionSelector.cpp
            src/operators/CPhysicalPartitionSelectorDML.cpp
            src/operators/CPhysicalRowTrigger.cpp
            src/operators/CPhysicalScalarAgg.cpp
            src/operators/CPhysicalScan.cpp
            src/operators/CPhysicalSequence.cpp
            src/operators/CPhysicalSequenceProject.cpp
            src/operators/CPhysicalSort.cpp
            src/operators/CPhysicalSplit.cpp
            src/operators/CPhysicalSpool.cpp
            src/operators/CPhysicalStreamAgg.cpp
            src/operators/CPhysicalStreamAggDeduplicate.cpp
            src/operators/CPhysicalTableScan.cpp
            src/operators/CPhysicalTVF.cpp
            src/operators/CPhysicalUnionAll.cpp
            src/operators/CPredicateUtils.cpp
            src/operators/CScalar.cpp
            src/operators/CScalarAggFunc.cpp
            src/operators/CScalarArray.cpp
            src/operators/CScalarArrayCmp.cpp
            src/operators/CScalarArrayRef.cpp
            src/operators/CScalarArrayRefIndexList.cpp
            src/operators/CScalarAssertConstraint.cpp
            src/operators/CScalarAssertConstraintList.cpp
            src/operators/CScalarBitmapBoolOp.cpp
            src/operators/CScalarBitmapIndexProbe.cpp
            src/operators/CScalarBooleanTest.cpp
            src/operators/CScalarBoolOp.cpp
            src/operators/CScalarCaseTest.cpp
            src/operators/CScalarCast.cpp
            src/operators/CScalarCmp.cpp
            src/operators/CScalarCoalesce.cpp
            src/operators/CScalarCoerceToDomain.cpp
            src/operators/CScalarConst.cpp
            src/operators/CScalarDMLAction.cpp
            src/operators/CScalarFunc.cpp
            src/operators/CScalarIdent.cpp
            src/operators/CScalarIf.cpp
            src/operators/CScalarMinMax.cpp
            src/operators/CScalarNullIf.cpp
            src/operators/CScalarNullTest.cpp
            src/operators/CScalarOp.cpp
            src/operators/CScalarProjectElement.cpp
            src/operators/CScalarProjectList.cpp
            src/operators/CScalarSubquery.cpp
            src/operators/CScalarSubqueryAll.cpp
            src/operators/CScalarSubqueryAny.cpp
            src/operators/CScalarSubqueryExistential.cpp
            src/operators/CScalarSubqueryQuantified.cpp
            src/operators/CScalarSwitch.cpp
            src/operators/CScalarSwitchCase.cpp
            src/operators/CScalarWindowFunc.cpp
            src/operators/CWindowPreprocessor.cpp
            src/optimizer/COptimizer.cpp
            src/optimizer/COptimizerConfig.cpp
            src/search/CBinding.cpp
            src/search/CGroup.cpp
            src/search/CGroupExpression.cpp
            src/search/CGroupProxy.cpp
            src/search/CJob.cpp
            src/search/CJobFactory.cpp
            src/search/CJobGroup.cpp
            src/search/CJobGroupExploration.cpp
            src/search/CJobGroupExpression.cpp
            src/search/CJobGroupExpressionExploration.cpp
            src/search/CJobGroupExpressionImplementation.cpp
            src/search/CJobGroupExpressionOptimization.cpp
            src/search/CJobGroupImplementation.cpp
            src/search/CJobGroupOptimization.cpp
            src/search/CJobQueue.cpp
            src/search/CJobTest.cpp
            src/search/CJobTransformation.cpp
            src/search/CMemo.cpp
            src/search/CScheduler.cpp
            src/search/CSchedulerContext.cpp
            src/search/CSearchStage.cpp
            src/translate/CTranslatorDXLToExpr.cpp
            src/translate/CTranslatorDXLToExprUtils.cpp
            src/translate/CTranslatorExprToDXL.cpp
            src/translate/CTranslatorExprToDXLUtils.cpp
            src/xforms/CDecorrelator.cpp
            src/xforms/CJoinOrder.cpp
            src/xforms/CJoinOrderDP.cpp
            src/xforms/CJoinOrderMinCard.cpp
            src/xforms/CSubqueryHandler.cpp
            src/xforms/CXform.cpp
            src/xforms/CXformCollapseGbAgg.cpp
            src/xforms/CXformCollapseProject.cpp
            src/xforms/CXformCTEAnchor2Sequence.cpp
            src/xforms/CXformCTEAnchor2TrivialSelect.cpp
            src/xforms/CXformDelete2DML.cpp
            src/xforms/CXformDifference2LeftAntiSemiJoin.cpp
            src/xforms/CXformDifferenceAll2LeftAntiSemiJoin.cpp
            src/xforms/CXformDynamicGet2DynamicTableScan.cpp
            src/xforms/CXformDynamicIndexGet2DynamicIndexScan.cpp
            src/xforms/CXformExpandFullOuterJoin.cpp
            src/xforms/CXformExpandNAryJoin.cpp
            src/xforms/CXformExpandNAryJoinDP.cpp
            src/xforms/CXformExpandNAryJoinMinCard.cpp
            src/xforms/CXformExploration.cpp
            src/xforms/CXformExternalGet2ExternalScan.cpp
            src/xforms/CXformFactory.cpp
            src/xforms/CXformGbAgg2Apply.cpp
            src/xforms/CXformGbAgg2HashAgg.cpp
            src/xforms/CXformGbAgg2ScalarAgg.cpp
            src/xforms/CXformGbAgg2StreamAgg.cpp
            src/xforms/CXformGbAggDedup2HashAggDedup.cpp
            src/xforms/CXformGbAggDedup2StreamAggDedup.cpp
            src/xforms/CXformGbAggWithMDQA2Join.cpp
            src/xforms/CXformGet2TableScan.cpp
            src/xforms/CXformImplementAssert.cpp
            src/xforms/CXformImplementation.cpp
            src/xforms/CXformImplementBitmapTableGet.cpp
            src/xforms/CXformImplementConstTableGet.cpp
            src/xforms/CXformImplementCTEConsumer.cpp
            src/xforms/CXformImplementCTEProducer.cpp
            src/xforms/CXformImplementDML.cpp
            src/xforms/CXformImplementDynamicBitmapTableGet.cpp
            src/xforms/CXformImplementInnerIndexApply.cpp
            src/xforms/CXformImplementLimit.cpp
            src/xforms/CXformImplementPartitionSelector.cpp
            src/xforms/CXformImplementRowTrigger.cpp
            src/xforms/CXformImplementSequence.cpp
            src/xforms/CXformImplementSequenceProject.cpp
            src/xforms/CXformImplementSplit.cpp
            src/xforms/CXformImplementTVF.cpp
            src/xforms/CXformImplementTVFNoArgs.cpp
            src/xforms/CXformImplementUnionAll.cpp
            src/xforms/CXformIndexGet2IndexScan.cpp
            src/xforms/CXformInlineCTEConsumer.cpp
            src/xforms/CXformInlineCTEConsumerUnderSelect.cpp
            src/xforms/CXformInnerApply2InnerJoin.cpp
            src/xforms/CXformInnerApply2InnerJoinNoCorrelations.cpp
            src/xforms/CXformInnerApplyWithOuterKey2InnerJoin.cpp
            src/xforms/CXformInnerJoin2BitmapIndexGetApply.cpp
            src/xforms/CXformInnerJoin2DynamicBitmapIndexGetApply.cpp
            src/xforms/CXformInnerJoin2DynamicIndexGetApply.cpp
            src/xforms/CXformInnerJoin2HashJoin.cpp
            src/xforms/CXformInnerJoin2IndexApply.cpp
            src/xforms/CXformInnerJoin2IndexGetApply.cpp
            src/xforms/CXformInnerJoin2NLJoin.cpp
            src/xforms/CXformInnerJoin2PartialDynamicIndexGetApply.cpp
            src/xforms/CXformInnerJoinWithInnerSelect2BitmapIndexGetApply.cpp
            src/xforms/CXformInnerJoinWithInnerSelect2DynamicBitmapIndexGetApply.cpp
            src/xforms/CXformInnerJoinWithInnerSelect2DynamicIndexGetApply.cpp
            src/xforms/CXformInnerJoinWithInnerSelect2IndexGetApply.cpp
            src/xforms/CXformInnerJoinWithInnerSelect2PartialDynamicIndexGetApply.cpp
            src/xforms/CXformInsert2DML.cpp
            src/xforms/CXformIntersect2Join.cpp
            src/xforms/CXformIntersectAll2LeftSemiJoin.cpp
            src/xforms/CXformJoinAssociativity.cpp
            src/xforms/CXformJoinCommutativity.cpp
            src/xforms/CXformLeftAntiSemiApply2LeftAntiSemiJoin.cpp
            src/xforms/CXformLeftAntiSemiApply2LeftAntiSemiJoinNoCorrelations.cpp
            src/xforms/CXformLeftAntiSemiApplyNotIn2LeftAntiSemiJoinNotIn.cpp
            src/xforms/CXformLeftAntiSemiApplyNotIn2LeftAntiSemiJoinNotInNoCorrelations.cpp
            src/xforms/CXformLeftAntiSemiJoin2CrossProduct.cpp
            src/xforms/CXformLeftAntiSemiJoin2HashJoin.cpp
            src/xforms/CXformLeftAntiSemiJoin2NLJoin.cpp
            src/xforms/CXformLeftAntiSemiJoinNotIn2HashJoinNotIn.cpp
            src/xforms/CXformLeftAntiSemiJoinNotIn2NLJoinNotIn.cpp
            src/xforms/CXformLeftOuter2InnerUnionAllLeftAntiSemiJoin.cpp
            src/xforms/CXformLeftOuterApply2LeftOuterJoin.cpp
            src/xforms/CXformLeftOuterApply2LeftOuterJoinNoCorrelations.cpp
            src/xforms/CXformLeftOuterJoin2HashJoin.cpp
            src/xforms/CXformLeftOuterJoin2NLJoin.cpp
            src/xforms/CXformLeftSemiApply2LeftSemiJoin.cpp
            src/xforms/CXformLeftSemiApply2LeftSemiJoinNoCorrelations.cpp
            src/xforms/CXformLeftSemiApplyWithExternalCorrs2InnerJoin.cpp
            src/xforms/CXformLeftSemiJoin2CrossProduct.cpp
            src/xforms/CXformLeftSemiJoin2HashJoin.cpp
            src/xforms/CXformLeftSemiJoin2InnerJoin.cpp
            src/xforms/CXformLeftSemiJoin2InnerJoinUnderGb.cpp
            src/xforms/CXformLeftSemiJoin2NLJoin.cpp
            src/xforms/CXformMaxOneRow2Assert.cpp
            src/xforms/CXformProject2Apply.cpp
            src/xforms/CXformProject2ComputeScalar.cpp
            src/xforms/CXformPushDownLeftOuterJoin.cpp
            src/xforms/CXformPushGbBelowJoin.cpp
            src/xforms/CXformPushGbDedupBelowJoin.cpp
            src/xforms/CXformPushGbWithHavingBelowJoin.cpp
            src/xforms/CXformResult.cpp
            src/xforms/CXformSelect2Apply.cpp
            src/xforms/CXformSelect2BitmapBoolOp.cpp
            src/xforms/CxformSelect2DynamicBitmapBoolOp.cpp
            src/xforms/CXformSelect2DynamicIndexGet.cpp
            src/xforms/CXformSelect2Filter.cpp
            src/xforms/CXformSelect2IndexGet.cpp
            src/xforms/CXformSelect2PartialDynamicIndexGet.cpp
            src/xforms/CXformSequenceProject2Apply.cpp
            src/xforms/CXformSimplifyGbAgg.cpp
            src/xforms/CXformSimplifyLeftOuterJoin.cpp
            src/xforms/CXformSimplifySubquery.cpp
            src/xforms/CXformSplitDQA.cpp
            src/xforms/CXformSplitGbAgg.cpp
            src/xforms/CXformSplitGbAggDedup.cpp
            src/xforms/CXformSplitLimit.cpp
            src/xforms/CXformSubqJoin2Apply.cpp
            src/xforms/CXformSubqueryUnnest.cpp
            src/xforms/CXformUnion2UnionAll.cpp
            src/xforms/CXformUnnestTVF.cpp
            src/xforms/CXformUpdate2DML.cpp
            src/xforms/CXformUtils.cpp)

target_link_libraries(gpopt
                      gpdbcost
                      naucrates
                      ${CMAKE_THREAD_LIBS_INIT} ${CMAKE_DL_LIBS}
                      ${GPOS_LIBRARIES}
                      ${XERCES_LIBRARIES}
                      ${GPORCA_SOLARIS_EXTRA_LIBS})

set_target_properties(gpopt PROPERTIES
                      SOVERSION ${GPORCA_ABI_VERSION}
                      VERSION ${GPORCA_VERSION_STRING})

install(TARGETS gpopt DESTINATION lib)
install(DIRECTORY include/gpopt DESTINATION include)
